<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".AcceptanceActivity" >

	<TextView
		android:id="@+id/tv_accept_head"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center|top"
		android:textSize="20sp"
		android:textStyle="bold"
		android:text="@string/acceptance_head" />

	<TextView
		android:id="@+id/tv_accept_qualified"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tv_accept_head"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="40dp"
		android:text="@string/acceptance_qulified"
		android:textSize="12sp" />
	<TextView
		android:id="@+id/tv_accept_guaranteeTime"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tv_accept_qualified"
		android:gravity="center|top"
		android:layout_marginTop="20dp"
		android:layout_marginLeft="40dp"
		android:text="@string/acceptance_guaranteeTime"
		android:textSize="12sp" />

	<ImageButton
		android:id="@+id/imageButton1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tv_accept_qualified"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="146dp"
		android:src="@android:drawable/alert_light_frame" android:contentDescription="TODO"/>

</RelativeLayout>
